OCaml/mini-c/tests/typing/bad/testfile-arith-3.c

struct S { int a; };
int main() { int p; struct S *q; putchar(p-q); }

